tests/specs/npm/dual_cjs_esm/ts_referrer_type_cjs/check.out
Download http://localhost:4260/@denotest%2fdual-cjs-esm
Download http://localhost:4260/@denotest/dual-cjs-esm/1.0.0.tgz
Initialize @denotest/dual-cjs-esm@1.0.0
Check file:///[WILDLINE]/main.ts
TS2322 [ERROR]: Type '"cjs"' is not assignable to type '"other"'.
const kind: "other" = mod.getKind();
      ~~~~
    at file:///[WILDLINE]/main.ts:3:7

error: Type checking failed.
